# mlb-data

./: .gitignore  README.md  pyproject.toml
src/mlb_data/: __init__.py  batters.py  games.py  pitch_stats.py  pitchers.py  players.py  team_stats.py  teams.py  utils.py
